--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#AA6FFF</color>
+    <color name="colorPrimaryDark">#783CFF</color>
+    <color name="colorAccent">#9C27B0</color>
     <color name="green">#00FF0A</color>
     <color name="gray">#7B7B7B</color>
+    <color name="white">#FFF</color>
+    <color name="dark_purple">#7c74b6</color>
+    <color name="dark_pink">#d25a95</color>
+    <color name="light_pink">#FAAAD2</color>
+    <color name="black">#272727</color>
 </resources>
