--- a/app/app/src/main/res/layout/activity_login.xml
+++ b/app/app/src/main/res/layout/activity_login.xml
@@ -29,9 +29,9 @@
 
 
         <ImageView
-            android:layout_marginTop="10dp"
             android:layout_width="200dp"
             android:layout_height="130dp"
+            android:layout_marginTop="10dp"
             android:scaleType="fitXY"
             android:src="@mipmap/logo"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -50,7 +50,6 @@
 
 
             <LinearLayout
-                android:padding="25dp"
                 android:id="@+id/card_view"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
@@ -60,11 +59,11 @@
                 android:elevation="5dp"
                 android:gravity="center"
                 android:orientation="horizontal"
+                android:padding="25dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <EditText
-                    android:letterSpacing="0.3"
                     android:id="@+id/phoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -72,6 +71,7 @@
                     android:gravity="center"
                     android:hint="@string/enter_phone_number"
                     android:inputType="phone"
+                    android:letterSpacing="0.3"
                     android:maxLength="11"
                     android:text="@={viewModel.phoneNumber}"
                     android:textAppearance="@style/vazir_font" />
@@ -80,27 +80,23 @@
 
         </RelativeLayout>
 
-        <Button
+        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/login"
-            android:layout_width="wrap_content"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
             android:alpha="0.8"
             android:background="@drawable/login_btn"
-            android:elevation="10dp"
             android:enabled="false"
             android:onClick="@{() -> viewModel.sendSMS()}"
-            android:paddingStart="30dp"
-            android:paddingTop="10dp"
-            android:paddingEnd="30dp"
-            android:paddingBottom="10dp"
             android:text="@string/receive_code"
             android:textAppearance="@style/vazir_font"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/holder"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:spinning_bar_color="#FFF"
+            app:spinning_bar_padding="6dp"
+            app:spinning_bar_width="4dp" />
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
