--- a/app/app/src/main/res/layout/fragment_category.xml
+++ b/app/app/src/main/res/layout/fragment_category.xml
@@ -7,9 +7,10 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".main.news.NewsFragment">
 
         <ProgressBar
@@ -21,26 +22,23 @@
             android:visibility="visible"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            app:layout_constraintTop_toBottomOf="@+id/loading"
             android:id="@+id/refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent">
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/loading">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/loading" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
-
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
