--- a/app/app/src/main/res/layout/fragment_news.xml
+++ b/app/app/src/main/res/layout/fragment_news.xml
@@ -10,18 +10,53 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layoutDirection="rtl"
         tools:context=".main.news.NewsFragment">
 
+        <LinearLayout
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/colorPrimaryDark"
+            android:gravity="end|center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_weight="0.7"
+                android:text="@string/news"
+                android:textAppearance="@style/vazir_font"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:id="@+id/search"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/circular_ripple"
+                android:padding="10dp"
+                android:src="@drawable/ic_search_icon"
+                android:tint="@color/white" />
+
+
+        </LinearLayout>
+
         <com.google.android.material.tabs.TabLayout
-            android:background="#E6E6E6"
-            app:tabSelectedTextColor="@color/colorPrimaryDark"
-            app:tabTextColor="@color/gray"
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#E6E6E6"
             android:elevation="5dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tabTextAppearance="@style/vazir_font" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:tabSelectedTextColor="@color/colorPrimaryDark"
+            app:tabTextAppearance="@style/vazir_font"
+            app:tabTextColor="@color/gray" />
 
 
         <androidx.viewpager2.widget.ViewPager2
