--- a/app/app/src/main/res/layout/news_recycler_model.xml
+++ b/app/app/src/main/res/layout/news_recycler_model.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:elevation="5dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:background="@drawable/main_icon_background"
+    android:elevation="5dp"
     android:layoutDirection="rtl"
     android:orientation="horizontal"
     android:padding="10dp">
@@ -15,7 +14,7 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="120dp"
-        android:layout_height="match_parent"
+        android:layout_height="120dp"
         android:scaleType="centerCrop"
         android:src="@color/black" />
 
@@ -71,6 +70,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="0.8"
                 android:ellipsize="end"
+                android:maxLines="1"
                 android:textAppearance="@style/vazir_font"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="13sp" />
