--- a/app/app/src/main/res/values/styles.xml
+++ b/app/app/src/main/res/values/styles.xml
@@ -14,4 +14,12 @@
     </style>
 
 
+    <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <item name="android:tint">@color/white</item>
+        <item name="android:fontFamily">@font/vazir</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="queryBackground">@color/white</item>
+    </style>
+
 </resources>
