--- a/app/app/src/main/res/layout/main_item_model.xml
+++ b/app/app/src/main/res/layout/main_item_model.xml
@@ -9,14 +9,16 @@
     android:elevation="5dp"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:clipToPadding="false"
+    android:padding="15dp">
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="90dp"
-        android:layout_height="75dp" />
+        android:layout_width="80dp"
+        android:layout_height="65dp" />
 
     <TextView
+        android:textSize="13sp"
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
