--- a/app/app/src/main/res/xml/network_security_config.xml
+++ b/app/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">www.mocky.io</domain>
+        <domain includeSubdomains="true">darakhshan.ir</domain>
     </domain-config>
 </network-security-config>
