adding some new feature to profile page

--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorAccent">#9C27B0</color>
     <color name="green">#00FF0A</color>
     <color name="gray">#7B7B7B</color>
-    <color name="light_gray">#B7B7B7</color>
+    <color name="light_gray">#CACACA</color>
     <color name="white">#FFF</color>
     <color name="dark_purple">#7c74b6</color>
     <color name="dark_pink">#d25a95</color>
