--- a/app/app/src/main/res/layout/fragment_profile.xml
+++ b/app/app/src/main/res/layout/fragment_profile.xml
@@ -11,13 +11,15 @@
     </data>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.motion.widget.MotionLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layoutDirection="rtl"
+        app:layoutDescription="@xml/profile_motion"
         tools:context=".main.profile.ProfileFragment">
 
         <ImageView
+            android:id="@+id/exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -39,8 +41,6 @@
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 app:cpb_background_progressbar_color="@color/light_pink"
-                app:cpb_progress="100"
-                app:cpb_progress_max="180"
                 app:cpb_progressbar_color="@color/dark_purple" />
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -59,22 +59,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{viewModel.name}"
-            android:textAppearance="@style/vazir_font"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/avatarHolder" />
+            android:textAppearance="@style/vazir_font" />
 
 
         <TextView
             android:id="@+id/expire"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.subscription}"
+            android:text="@{@string/expireDate(viewModel.subscription)}"
             android:textAppearance="@style/vazir_font"
-            android:textColor="@color/gray"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name" />
+            android:textColor="@color/gray" />
 
 
         <ImageView
@@ -87,170 +81,143 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <ScrollView
+        <LinearLayout
+            android:id="@+id/infoHolder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fadingEdge="vertical"
-            android:fadingEdgeLength="30dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/rectangular_card_view"
+            android:elevation="10dp"
+            android:orientation="horizontal"
+            android:padding="10dp"
             app:layout_constraintTop_toBottomOf="@+id/profileBanner">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.3"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:id="@+id/infoHolder"
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="25dp"
-                    android:background="@drawable/login_card_view"
-                    android:backgroundTint="@color/white_pink"
-                    android:elevation="5dp"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.3"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_marginBottom="8dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="@string/following"
-                            android:textAppearance="@style/vazir_font" />
+                    android:layout_marginBottom="8dp"
+                    android:gravity="center"
+                    android:text="@string/following"
+                    android:textAppearance="@style/vazir_font" />
 
 
-                        <TextView
-                            android:id="@+id/follower"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="@{viewModel.followers}"
-                            android:textAppearance="@style/vazir_font"
-                            android:textColor="@color/gray"
-                            android:textSize="14sp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.3"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_marginBottom="8dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="@string/followers"
-                            android:textAppearance="@style/vazir_font" />
-
-
-                        <TextView
-                            android:id="@+id/following"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="@{viewModel.following}"
-                            android:textAppearance="@style/vazir_font"
-                            android:textColor="@color/gray"
-                            android:textSize="14sp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.3"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_marginBottom="8dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="@string/signals"
-                            android:textAppearance="@style/vazir_font" />
-
-
-                        <TextView
-                            android:id="@+id/signals"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="@{viewModel.signals}"
-                            android:textAppearance="@style/vazir_font"
-                            android:textColor="@color/gray"
-                            android:textSize="14sp" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
+                <TextView
+                    android:id="@+id/follower"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
-                    android:orientation="vertical"
-                    app:layout_constraintTop_toBottomOf="@+id/infoHolder">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:layout_weight="0.3"
-                            android:text="@string/last_signals"
-                            android:textAppearance="@style/vazir_font" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="15dp"
-                            android:text="@string/all"
-                            android:textAppearance="@style/vazir_font"
-                            android:textColor="@color/gray" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginEnd="20dp"
-                        android:background="@color/light_gray" />
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fadingEdge="horizontal"
-                        android:fadingEdgeLength="40dp" />
-
-                </LinearLayout>
+                    android:gravity="center"
+                    android:text="@{viewModel.followers}"
+                    android:textAppearance="@style/vazir_font"
+                    android:textColor="@color/gray"
+                    android:textSize="14sp" />
 
             </LinearLayout>
-        </ScrollView>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.3"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:gravity="center"
+                    android:text="@string/followers"
+                    android:textAppearance="@style/vazir_font" />
 
 
-        <Button
-            android:id="@+id/exit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+                <TextView
+                    android:id="@+id/following"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@{viewModel.following}"
+                    android:textAppearance="@style/vazir_font"
+                    android:textColor="@color/gray"
+                    android:textSize="14sp" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.3"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:gravity="center"
+                    android:text="@string/signals"
+                    android:textAppearance="@style/vazir_font" />
+
+
+                <TextView
+                    android:id="@+id/signals"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@{viewModel.signals}"
+                    android:textAppearance="@style/vazir_font"
+                    android:textColor="@color/gray"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:elevation="10dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/infoHolder">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/light_gray" />
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:elevation="5dp"
+                app:tabMode="scrollable"
+                app:tabSelectedTextColor="@color/black"
+                app:tabTextAppearance="@style/vazir_font"
+                app:tabTextColor="@color/gray" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginBottom="5dp"
+                android:background="@color/light_gray" />
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
+
+
+    </androidx.constraintlayout.motion.widget.MotionLayout>
 
 </layout>
