--- a/app/app/src/main/res/drawable/ic_information_icon.xml
+++ b/app/app/src/main/res/drawable/ic_information_icon.xml
@@ -7,11 +7,11 @@
       android:pathData="M25.37,25.37m-23.87,0a23.87,23.87 0,1 1,47.74 0a23.87,23.87 0,1 1,-47.74 0"
       android:strokeWidth="3"
       android:fillColor="#00000000"
-      android:strokeColor="#414042"/>
+      android:strokeColor="#808285"/>
   <path
       android:pathData="M20,24.46c1.72,-2.19 4,-4.83 6.51,-5.45 0.35,-0.08 1.27,-0.16 1.49,0.65 1,3.5 -2.65,13.58 -1.36,16.07a0.63,0.63 0,0 0,0.47 0.3c1.13,0.17 2.15,-2.72 3.27,-3.1a4.61,4.61 0,0 0,0.9 0.63s-4.48,6.37 -6.56,5.54c-3.28,-1.32 -0.51,-10.16 0.13,-16.43 0.05,-0.46 -0.3,-0.61 -1,-0.48s-1.36,1.35 -2.73,3Z"
-      android:fillColor="#633173"/>
+      android:fillColor="#a1479a"/>
   <path
       android:pathData="M24.64,14.18a1.79,2.32 0,1 0,3.58 0a1.79,2.32 0,1 0,-3.58 0z"
-      android:fillColor="#633173"/>
+      android:fillColor="#a1479a"/>
 </vector>
